--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   },
   "homepage": "https://github.com/vikalpj/image-resize-lambda#readme",
   "dependencies": {
-    "async": "^2.6.0",
-    "dotenv": "^4.0.0",
+    "request": "^2.88.0",
+    "async": "^3.1.0",
+    "dotenv": "^8.0.0",
     "gm": "^1.23.1",
-    "mime-types": "^2.1.17",
+    "mime-types": "^2.1.24",
     "mkdirp": "^0.5.1",
-    "smartcrop": "^1.1.1",
-    "smartcrop-sharp": "^1.0.5"
+    "smartcrop": "^2.0.3",
+    "smartcrop-sharp": "^2.0.2",
+    "sharp": "^0.20.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.168.0",
-    "express": "^4.16.2"
+    "aws-sdk": "^2.496.0",
+    "express": "^4.17.1"
   }
 }
