--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gm": "^1.23.1",
     "mime-types": "^2.1.27",
     "mkdirp": "^1.0.4",
+    "sharp": "^0.25.4",
     "smartcrop": "^2.0.3",
     "smartcrop-sharp": "^2.0.3"
   },
